[metadata]
name = vnpy_o32
version = 1.2.0
url = https://www.vnpy.com
author = Xiaoyou Chen
author_email = xiaoyou.chen@mail.vnpy.com
description = O32 gateway for vn.py quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    importlib_metadata

[options.package_data]
* = *.dll, *.so, *.pyd